--- a/less/main-content.less
+++ b/less/main-content.less
@@ -4,6 +4,7 @@
         font-size: 5rem;
         text-align: center;
         font-family: new_waltographregular;
+        margin: auto;
         
     }
     p {
@@ -14,6 +15,8 @@
         .flex-layout(center, center);
         padding-bottom: 3%;
         padding-top: 1%;
+        margin: auto;
+        
     }
     @media @desktop {
         margin-left: 9%;
@@ -22,12 +25,13 @@
     }
 }
 .container {
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
+    text-align: center; 
+    margin: auto;
         // stroller and pass sharing
         .swap {
             .flex-layout(center, center);
@@ -35,7 +39,6 @@
             .stroller {
                 width: 90%;
                 height: 10%;
-                padding-left: 10%;
                 padding-bottom: 5%;
                 
                 @media @tablet {
@@ -102,10 +105,10 @@
             flex-wrap: wrap;
             justify-content: center;
             align-items: center;
+            margin: auto;
                 .characters {
                     width: 90%;
                     height: 10%;
-                    padding-left: 10%;
                     padding-bottom: 5%;
 
                     @media @tablet {
@@ -168,10 +171,10 @@
         .event {
             .flex-layout(center, center);
             flex-direction: column;
+            margin: auto;
                 .daycare {
                     width: 90%;
                     height: 10%;
-                    padding-left: 10%;
                     padding-bottom: 5%;
 
                     @media @tablet {
@@ -192,7 +195,7 @@
                     @media @tablet {
                         width: 50%;
                         padding-bottom: 5%;
-                        padding-left: 2%;;
+                        padding-left: 2%;
                     }
                     @media @desktop {     
                         width: 25%;
@@ -231,12 +234,12 @@
         .discuss {
             .flex-layout(center, space-evenly);
             flex-direction: column;
+            margin: auto;
                 .castle {
                     width: 90%;
                     height: 10%;
-                    padding-left: 10%;
                     padding-bottom: 5%;
-
+                    padding-left: 4%;
                     
                     @media @tablet {
                         width: 30%;
@@ -253,6 +256,8 @@
                     font-size: 3rem;
                     text-align: center;
                     font-family: 'Roboto Condensed', sans-serif;
+                    padding-left: 4%;
+                    
                     
                     @media @tablet {
                         width: 40%;
